# opinionated-databricks-utilities

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html
.github/workflows/: branch-check.yml  main-release.yml  pr-checks.yml  publish-docs.yml
dev_guide/: index.html
docs/: dev_guide.md  index.md  user_guide.md
docs/reference/: bootstrap.md  exceptions.md
license/: index.html
reference/bootstrap/: index.html
reference/exceptions/: index.html
scripts/: bump_version.py  run_tests.py
search/: search_index.json
src/odu/: __init__.py  bootstrap.py  exceptions.py
tests/: test_add_src_path.py  test_build_return.py  test_find_repo_root.py  test_repo_root_finder.py
user_guide/: index.html
